# git-visual-timeline

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml  watch_20260402-120227
docs/: external_test_plan.md
docs/superpowers/specs/: 2026-04-02-gvt-design.md
src/gvt/: app.py  cli.py  logging_setup.py
src/gvt/git/: cache.py  repo.py
src/gvt/styles/: app.tcss
src/gvt/widgets/: changed_files.py  commit_bar.py  commit_toast.py  diff_view.py  file_tree.py  modals.py  status_bar.py  timeline.py
tests/: conftest.py  test_app_actions.py  test_app_integration.py  test_cache.py  test_changed_files.py  test_diff_view_logic.py  test_git_repo.py  test_git_repo_extended.py  test_logging_setup.py  test_repo_resilience.py  test_timeline_logic.py  test_widgets.py
tests/e2e/: README.md  harness.sh  results.tap  results.xml  run_all.sh  section_A.sh  section_G.sh  section_I.sh
