[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "git-visual-timeline"
version = "0.2.0"
description = "Git Visual Timeline — a keyboard-driven TUI for exploring file commit history"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Adam Reese", email = "areese801@gmail.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Version Control :: Git",
]
keywords = ["git", "tui", "timeline", "diff", "blame", "textual"]
dependencies = [
    "textual>=0.40.0",
    "gitpython>=3.1.40",
    "pygments>=2.17.0",
    "thefuzz[speedup]>=0.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "textual-dev>=1.0",
    "ruff>=0.1.0",
    "build",
    "twine",
]

[project.urls]
Homepage = "https://github.com/areese801/git-visual-timeline"
Repository = "https://github.com/areese801/git-visual-timeline"
Issues = "https://github.com/areese801/git-visual-timeline/issues"

[project.scripts]
gvt = "gvt.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88

[tool.pytest.ini_options]
asyncio_mode = "auto"
